# algo-trader

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
base/include/: backtester.h  execution.h  instrument.h  order_manager.h  portfolio_manager.h  quotes.h  risk_manager.h  universe.h
base/src/: backtester.cpp  execution.cpp  instrument.cpp  order_manager.cpp  portfolio_manager.cpp  quotes.cpp  risk_manager.cpp  universe.cpp
data/: historicalData.csv  universe.csv
strategy/: .gitignore
strategy/include/: strategy.h
strategy/src/: strategy.cpp
util/include/: common.h  logger.h
util/src/: logger.cpp
